Fixed gap between nav bar and about us heading, and main page background fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,9 +12,8 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  
   margin: 0;
-  padding-top: 80px;
+
 }
 
 .main-title::before {
